--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a-asset-item id="hammer" src="https://vazxmixjsiawhamofees.supabase.co/storage/v1/object/public/models/hammer/model.gltf">
         </a-asset-item>
         </a-assets>
-      <a-entity environment="preset: arches; groundColor: pink; grid: cross; seed:3; fog:0.4;" position="0 -3 0"></a-entity>
+      <a-entity environment="preset: arches; groundColor: blue; grid: cross; seed:3; fog:0.4;" position="0 -3 0"></a-entity>
       <a-entity id="rig">
         <a-camera position="0 1.6 0"></a-camera>
         <a-entity oculus-touch-controls="hand: left"></a-entity>
@@ -20,7 +20,7 @@
           oculus-thumbstick-controls
         ></a-entity>
       </a-entity>
-      <a-entity gltf-model="#hammer" position="0 3 -2"></a-entity>
+      <a-entity gltf-model="#hammer" position="0 1 -2"></a-entity>
     </a-scene>
   </body>
 </html>
