--- a/index.html
+++ b/index.html
@@ -3,24 +3,62 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
     <script src="https://gftruj.github.io/webzamples/aframe/controls/oculus-thumbstick-controls.js"></script>
+    <script src="https://unpkg.com/aframe-teleport-controls@0.3.x/dist/aframe-teleport-controls.min.js"></script>
+    <script>
+      document
+        .querySelector("#blockHand")
+        .addEventListener("click", function (evt) {
+          let newVoxelEl = document.createElement("a-entity");
+          newVoxelEl.setAttribute("mixin", "voxel");
+
+          let normal = evt.detail.intersection.face.normal;
+          normal.multiplyScalar(0.25);
+
+          let position = evt.detail.intersection.point;
+          position.add(normal);
+
+          newVoxelEl.setAttribute("position", position);
+
+          this.appendChild(newVoxelEl);
+        });
+    </script>
   </head>
   <body>
-    <a-scene gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/v1/decoders/;
-    meshoptDecoderPath: https://unpkg.com/meshoptimizer@0.16.0/meshopt_decoder.js;">
-        <a-assets>
-        <a-asset-item id="hammer" src="https://vazxmixjsiawhamofees.supabase.co/storage/v1/object/public/models/hammer/model.gltf">
+    <a-scene
+      gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/v1/decoders/;
+    meshoptDecoderPath: https://unpkg.com/meshoptimizer@0.16.0/meshopt_decoder.js;"
+    >
+      <a-assets>
+        <a-asset-item
+          id="hammer"
+          src="https://vazxmixjsiawhamofees.supabase.co/storage/v1/object/public/models/hammer/model.gltf"
+        >
         </a-asset-item>
-        </a-assets>
-      <a-entity environment="preset: arches; groundColor: blue; grid: cross; seed:3; fog:0.4;" position="0 -3 0"></a-entity>
+      </a-assets>
+      <a-entity
+        id="ground"
+        environment="preset: arches; groundColor: pink; grid: cross; seed:3; fog:0.4;"
+        position="0 -3 0"
+      ></a-entity>
       <a-entity id="rig">
         <a-camera position="0 1.6 0"></a-camera>
-        <a-entity oculus-touch-controls="hand: left"></a-entity>
         <a-entity
+          oculus-touch-controls="hand: left"
+          teleport-controls="type: parabolic; collisionEntities: [mixin='voxel'], #ground"
+          intersection-spawn="event: click; mixin: voxel"
+        ></a-entity>
+        <a-entity
+          id="blockHand"
           oculus-touch-controls="hand: right"
           oculus-thumbstick-controls
+          laser-controls
         ></a-entity>
       </a-entity>
-      <a-entity gltf-model="#hammer" position="0 1 -2"></a-entity>
+      <a-entity
+        gltf-model="#hammer"
+        position="0 1 -2"
+        rotation="1 5 15"
+      ></a-entity>
     </a-scene>
   </body>
 </html>
