--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           src="https://vazxmixjsiawhamofees.supabase.co/storage/v1/object/public/models/hammer/model.gltf"
         >
         </a-asset-item>
+        <a-asset-item id="dog"
+        src ="https://market-assets.fra1.cdn.digitaloceanspaces.com/market-assets/models/dogue/model.gltf"/>
       </a-assets>
       <a-entity
         id="ground"
@@ -59,6 +61,7 @@
         position="0 1 -2"
         rotation="1 5 15"
       ></a-entity>
+      <a-entity gltf-model="#dog" position="6 -3 -4" rotation="4 0 0"/>
     </a-scene>
   </body>
 </html>
