--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
           this.appendChild(newVoxelEl);
         });
+
+        let dog = document.querySelector('#dog');
     </script>
   </head>
   <body>
