--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
       <a-entity
         id="ground"
         environment="preset: arches; groundColor: pink; grid: cross; seed:3; fog:0.4;"
-        position="0 -3 0"
+        position="0 -2 0"
       ></a-entity>
       <a-entity id="rig">
         <a-camera position="0 1.6 0"></a-camera>
         <a-entity
-          oculus-touch-controls="hand: left; handModelStyle: toon;"
+          oculus-touch-controls="hand: left; handModelStyle: toon; color=blue"
+          src="https://market-assets.fra1.cdn.digitaloceanspaces.com/market-assets/models/sword/model.gltf"
           teleport-controls="type: parabolic; collisionEntities: [mixin='voxel'], #ground"
           intersection-spawn="event: click; mixin: voxel"
         ></a-entity>
@@ -63,7 +64,7 @@
         position="0 1 -2"
         rotation="1 5 15"
       ></a-entity>
-      <a-entity gltf-model="#dog" position="6 -3 -4" rotation="4 0 0"/>
+      <a-entity gltf-model="#dog" position="6 -2 -4" rotation="4 0 0"/>
     </a-scene>
   </body>
 </html>
