fixes camera doesn't work in VR

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         ></a-entity>
         <a-entity
           id="blockHand"
-          hand-controls="hand: left; handModelStyle: lowPoly; color: #ffcccc"
+          hand-controls="hand: right; handModelStyle: lowPoly; color: #ffcccc"
           oculus-thumbstick-controls
           laser-controls
         ></a-entity>
@@ -79,11 +79,6 @@
       <!-- dog code -->
       <a-entity gltf-model="#dog" position="6 -2 -4" rotation="4 0 0">
       </a-entity>
-
-      <!-- Camera code -->
-      <a-camera position="3 0 3">
-        <a-cursor color="white" />
-      </a-camera>
 
       <!-- Welcome code -->
       <a-entity
