updates left to move too

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a-entity
           hand-controls="hand: left; handModelStyle: lowPoly; color: #ffcccc"
           teleport-controls="type: parabolic; collisionEntities: [mixin='voxel'], #ground"
+          oculus-thumbstick-controls
           intersection-spawn="event: click; mixin: voxel"
         ></a-entity>
         <a-entity
