adds dog moving

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         position="5 3 -3"
         scale="10 10 10"
         id="welcome"
+        animation="property: object3D.position.y; to: 3.2; dir: alternate; dur:2000; loop: true;"
       />
       </a-entity>
 
@@ -72,13 +73,18 @@
         droppable
         gltf-model="#hammer"
         position="0 1 -2"
-        rotation="1 5 15"
-        animation="property: object3D.position.y; to: 1.2; dir: alternate; dur:2000; loop: true;"
       ></a-box>
 
       <!-- dog code -->
-      <a-entity gltf-model="#dog" position="6 -2 -4" rotation="4 0 0">
-      </a-entity>
+      <a-box 
+        gltf-model="#dog" 
+        position="6 -2 -4" 
+        rotation="0 -45 0"
+        animation="property: position; to: -6 -2 4; dir: alternate; dur:5000; delay:3000"
+        animation__2="property: rotation; to: 0 180 0; dur:1000; delay: 8000;"
+        animation__3="property: position; from: -6 -2 4; to: -6 -2 -4; dir: alternate; dur:5000; delay:9000"
+        >
+      </a-box>
 
       <!-- Play code -->
       <a-box
