--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
       </a-box>
 
       <!-- Play code -->
-      <a-box
+      <a-entity
         text="value: Play with the blocks!; color: #3c1464"
-        position="1 6 5"
+        position="1 3 5"
         scale="10 10 10"
         id="instructions"
         rotation="0 180 0"
       />
-      </a-box>
+      </a-entity>
 
     <!-- Boxes to play with -->
     <a-box  
@@ -102,7 +102,7 @@
       stretchable  
       droppable 
       color="#652776" 
-      position="1 1 5"
+      position="1 0 5"
       rotation="0 45 0 "
     ></a-box>
 
@@ -111,7 +111,7 @@
     stretchable  
     droppable 
     color="#e8eaeb" 
-    position="0 1 5"
+    position="0 0 5"
     rotation="0 30 0"
     ></a-box>
 
@@ -120,7 +120,7 @@
     stretchable  
     droppable 
     color="#c385e4" 
-    position="-1 1 5"
+    position="-1 0 5"
     rotation="0 0 0"
     ></a-box>
 
@@ -129,7 +129,7 @@
     stretchable  
     droppable 
     color="#3c5804" 
-    position="-0.5 2 5"
+    position="-0.5 1 5"
     rotation="0 15 0"
     ></a-box>
 
@@ -138,7 +138,7 @@
     stretchable  
     droppable 
     color="#3c1464" 
-    position="0.5 2 5"
+    position="0.5 1 5"
     rotation="0 85 0"
     ></a-box>
 
@@ -147,7 +147,7 @@
     stretchable  
     droppable 
     color="#e8eaeb" 
-    position="0 3 5"
+    position="0 2 5"
     rotation="0 0 0"
     ></a-box>
 
